transaction mobile ui fixes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1735,6 +1735,9 @@ select {
 .-mr-5 {
 	margin-right: -1.25rem;
 }
+.mr-24 {
+	margin-right: 6rem;
+}
 .block {
 	display: block;
 }
@@ -2368,10 +2371,10 @@ select {
 	margin-top: calc(-1px * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(-1px * var(--tw-space-y-reverse));
 }
-.space-x-12 > :not([hidden]) ~ :not([hidden]) {
+.space-x-0 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
-	margin-right: calc(3rem * var(--tw-space-x-reverse));
-	margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+	margin-right: calc(0px * var(--tw-space-x-reverse));
+	margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-y-reverse: 0;
@@ -4221,10 +4224,6 @@ input[type='checkbox']:focus {
 		margin-top: 2.5rem;
 	}
 
-	.sm\:mt-2 {
-		margin-top: 0.5rem;
-	}
-
 	.sm\:mt-6 {
 		margin-top: 1.5rem;
 	}
@@ -4279,6 +4278,10 @@ input[type='checkbox']:focus {
 
 	.sm\:w-4 {
 		width: 1rem;
+	}
+
+	.sm\:w-1\/3 {
+		width: 33.333333%;
 	}
 
 	.sm\:max-w-md {
@@ -4376,13 +4379,15 @@ input[type='checkbox']:focus {
 		justify-content: space-between;
 	}
 
-	.sm\:justify-around {
-		justify-content: space-around;
-	}
-
 	.sm\:gap-x-4 {
 		-moz-column-gap: 1rem;
 		     column-gap: 1rem;
+	}
+
+	.sm\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-x-reverse: 0;
+		margin-right: calc(0px * var(--tw-space-x-reverse));
+		margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
 	}
 
 	.sm\:truncate {
@@ -5207,6 +5212,10 @@ input[type='checkbox']:focus {
 		margin-left: 0.5rem;
 	}
 
+	.lg\:ml-0 {
+		margin-left: 0px;
+	}
+
 	.lg\:block {
 		display: block;
 	}
@@ -5307,6 +5316,14 @@ input[type='checkbox']:focus {
 		width: 30%;
 	}
 
+	.lg\:w-9\/12 {
+		width: 75%;
+	}
+
+	.lg\:w-11\/12 {
+		width: 91.666667%;
+	}
+
 	.lg\:min-w-0 {
 		min-width: 0px;
 	}
@@ -5377,6 +5394,30 @@ input[type='checkbox']:focus {
 		--tw-space-y-reverse: 0;
 		margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
 		margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+	}
+
+	.lg\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-x-reverse: 0;
+		margin-right: calc(0px * var(--tw-space-x-reverse));
+		margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
+	}
+
+	.lg\:space-x-12 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-x-reverse: 0;
+		margin-right: calc(3rem * var(--tw-space-x-reverse));
+		margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+	}
+
+	.lg\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-y-reverse: 0;
+		margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+		margin-bottom: calc(0px * var(--tw-space-y-reverse));
+	}
+
+	.lg\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-x-reverse: 0;
+		margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+		margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 	}
 
 	.lg\:rounded-md {
